# clip-dashboard

./: Dockerfile  README.md  pyproject.toml
dashboard/: handlers.py  main.py
